--- a/app/src/main/res/layout/teams_activity.xml
+++ b/app/src/main/res/layout/teams_activity.xml
@@ -6,8 +6,8 @@
 
 <data>
 <variable
-    name="teamsvm"
-    type="com.example.nbateamviewer.network.viewmodels.TeamsViewModel"/>
+    name="teamsAdapter"
+    type="com.example.nbateamviewer.ui.team.TeamsListAdapter"/>
 </data>
 
 <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,7 +17,10 @@
         android:id="@+id/teamsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:adapter="@{teamsAdapter}"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
