--- a/app/src/main/res/layout/teams_list_item.xml
+++ b/app/src/main/res/layout/teams_list_item.xml
@@ -1,25 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <androidx.cardview.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_small"
-        app:cardElevation="1dp">
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
+
+    <data>
+        <variable
+            name="viewmodel"
+            type="com.example.nbateamviewer.network.viewmodels.TeamsViewModel"/>
+        <variable
+            name="team"
+            type="com.example.nbateamviewer.network.model.Teams"/>
+
+    </data>
+<androidx.cardview.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/margin_small"
+    app:cardElevation="1dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:background="?attr/selectableItemBackground"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="@{()->viewmodel.teamItemClicked(team)}">
+
 
         <TextView
             android:id="@+id/name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_medium"
-            android:maxLines="2"
-            android:text="text"
-            android:textSize="@dimen/textsize_xx"
+            android:text="@{team.full_name}"
             android:textColor="@color/colorBlack"
+            android:textSize="@dimen/textsize_xx"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/wins"
@@ -31,28 +48,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_medium"
-            android:maxLength="5"
+            android:background="@android:color/holo_green_dark"
+            android:gravity="center"
             android:minWidth="@dimen/minimum_width"
             android:textColor="@color/colorWhite"
-            android:background="@android:color/holo_green_dark"
+            android:text="@{Integer.toString(team.wins)}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/losses"
-            app:layout_constraintTop_toTopOf="parent"
-            android:gravity="center"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/losses"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_medium"
-            android:maxLength="5"
+            android:background="@color/colorRed"
+            android:gravity="center"
             android:minWidth="@dimen/minimum_width"
             android:textColor="@color/colorWhite"
-            android:background="@color/colorRed"
+            android:text="@{Integer.toString(team.losses)}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:gravity="center"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
+</layout>
