--- a/app/src/main/res/layout/teams_list_item.xml
+++ b/app/src/main/res/layout/teams_list_item.xml
@@ -53,7 +53,7 @@
             android:gravity="center"
             android:minWidth="@dimen/minimum_width"
             android:textColor="@color/colorWhite"
-            android:text="@{'W'+Integer.toString(team.wins)}"
+            android:text="@{(@string/w_string).concat(@string/space).concat(Integer.toString(team.wins))}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/losses"
             app:layout_constraintTop_toTopOf="parent" />
@@ -67,7 +67,7 @@
             android:gravity="center"
             android:minWidth="@dimen/minimum_width"
             android:textColor="@color/colorWhite"
-            android:text="@{'L'+Integer.toString(team.losses)}"
+            android:text="@{(@string/l_string).concat(@string/space).concat(Integer.toString(team.losses))}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
