--- a/app/src/main/res/layout/teams_activity.xml
+++ b/app/src/main/res/layout/teams_activity.xml
@@ -6,13 +6,29 @@
 
 <data>
 <variable
+    name="teamsViewModel"
+    type="com.example.nbateamviewer.network.viewmodels.TeamsViewModel"/>
+<variable
     name="teamsAdapter"
     type="com.example.nbateamviewer.ui.team.TeamsListAdapter"/>
 </data>
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="@dimen/margin_medium">
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/teamsRecyclerView"
         android:layout_width="match_parent"
