--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -8,7 +8,7 @@
         android:id="@+id/logo_id"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:src="@drawable/nba_icon"
+        android:src="@drawable/nba_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,8 +19,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/nba_team_viewer"
-        android:textColor="@android:color/background_dark"
+        android:textColor="@color/colorRed"
         android:textSize="@dimen/textsize_xxx"
+        android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo_id" />
