--- a/app/src/main/res/layout/teams_list_item.xml
+++ b/app/src/main/res/layout/teams_list_item.xml
@@ -14,6 +14,7 @@
 
     </data>
 <androidx.cardview.widget.CardView
+    android:id="@+id/cardViewTeam"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/margin_small_xxx"
