--- a/app/src/main/res/layout/player_list_item.xml
+++ b/app/src/main/res/layout/player_list_item.xml
@@ -7,7 +7,7 @@
     <data>
          <variable
             name="player"
-            type="com.example.nbateamviewer.network.model.Players"/>
+            type="com.example.nbateamviewer.model.Players"/>
 
     </data>
 <androidx.cardview.widget.CardView
